hero section is done

--- a/index.html
+++ b/index.html
@@ -89,10 +89,35 @@
     <!-- Main start -->
     <main class="site-main">
         <!-- Hero section start  -->
-        <section class="hero-section">
+        <section class="hero">
+            <div class="container">
+                <div class="hero__info">
+                    <h1 class="hero__title title">Мы заботимся о <span class="title__color">ваших питомцах!</span></h1>
+                    <div class="hero__wrap">
+                        <p class="hero__text">Вам и Вашему любимцу множество услуг по диагностике, профилактике заболеваний по лечению и уходу за Вашими животными. Профессионалы работающие в нашей клинике сделают все для того, чтобы быстро, эффективно и максимально безболезненно
+                            выполнить любие процедуры, которые необходимы Вашему домашнему любимцу.</p>
+                    </div>
+                    <a class="hero__link" href="#">Наши услуги</a>
+                </div>
+
+            </div>
 
         </section>
-        <!-- Hero section finish  -->
+        <!-- Hero section finish -->
+
+        <!-- Hero blockquote start -->
+        <section class="blockquote" id="block">
+            <div class="container">
+                <h2 class="visually-hidden">Blockquote Text</h2>
+                <div class="blockquote__info">
+                    <blockquote class="blockquote__text" cite="VetClinic">Наша ветеринарная клиника готова уделить максимум внимания Вам и Вашему питамцу. Здоровье и благополучие Ваших животных очень важно для нас и мы стремимся оказать наилучшую возможную ветеринарную помощь.</blockquote>
+                </div>
+                <h3 class="blockquote__title">Оржоникидзевская Ветеринарная клиника</h3>
+            </div>
+        </section>
+        <!-- Hero blockquote finish -->
+
+
 
     </main>
     <!-- Main finish  -->
