Services section is done

--- a/index.html
+++ b/index.html
@@ -117,6 +117,68 @@
         </section>
         <!-- Hero blockquote finish -->
 
+        <!-- Hero services start -->
+        <section class="services">
+            <div class="container">
+                <h2 class="services__title">Наши услуги</h2>
+                <div class="services__top our-services">
+                    <ul class="our-services__list">
+                        <li class="our-services__item our-services__item--one">
+                            <a class="our-services__link" href="#">
+                                <h3 class="our-services__title">Первичный осмотр</h3>
+                            </a>
+                        </li>
+                        <li class="our-services__item our-services__item--two">
+                            <a class="our-services__link" href="#">
+                                <h3 class="our-services__title">Первичный осмотр</h3>
+                            </a>
+                        </li>
+                        <li class="our-services__item our-services__item--thri">
+                            <a class="our-services__link" href="#">
+                                <h3 class="our-services__title">Хирургическое вмешательство</h3>
+                            </a>
+                        </li>
+                        <li class="our-services__item our-services__item--four">
+                            <a class="our-services__link" href="#">
+                                <h3 class="our-services__title">Дерматология</h3>
+                            </a>
+                        </li>
+                        <li class="our-services__item our-services__item--five">
+                            <a class="our-services__link" href="#">
+                                <h3 class="our-services__title">Лабораторная диагностика</h3>
+                            </a>
+                        </li>
+                        <li class="our-services__item our-services__item--six">
+                            <a class="our-services__link" href="#">
+                                <h3 class="our-services__title">Офтальмология</h3>
+                            </a>
+                        </li>
+                    </ul>
+                    <button class="our-services__button our-services__button--left">
+                            <img class="our-services__img" src="./images/leftarrow.svg" alt="left button">
+                        </button>
+                    <button class="our-services__button our-services__button--right">
+                            <img class="our-services" src="./images/rightarrow.svg" alt="left button">
+                        </button>
+                </div>
+                <div class="services__down inspection">
+                    <div class="inspection__picture">
+                        <img class="inspection__img" src="./images/cat.jpg" alt="cat in the doctor. its ill" srcset="./images/cat.jpg 1x , ./images/cat@2x.jpg 2x">
+                    </div>
+                    <div class="inspection__info reception">
+                        <h4 class="reception__title">Первичный осмотр</h4>
+                        <p class="reception__text">По условиям акции в нашей клинике предоставляетса безплатная услуга “Дневной стационар” которая позволяет экономить Ваше время. Вы имеете возможность оставить у нас.</p>
+                        <p class="reception__text reception__text--margin">По условиям акции в нашей клинике предоставляетса безплатная услуга “Дневной стационар” которая позволяет экономить Ваше время. Вы имеете возможность оставить у нас.</p>
+                        <div class="reception__wrap">
+                            <a class="reception__link reception__link--one" href="#">Узнать цену</a>
+                            <a class="reception__link reception__link--two" href="#">Записаться на приём</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Hero services finish -->
+
 
 
     </main>
