input section is done

--- a/index.html
+++ b/index.html
@@ -178,6 +178,19 @@
             </div>
         </section>
         <!-- Hero services finish -->
+        <!-- Hero events start -->
+        <section class="events" id="event">
+            <div class="container">
+                <div class="events__info">
+                    <h2 class="events__title">Будь в курсе событий</h2>
+                    <form class="events__form" action="https://echo.htmlacademy.ru/courses" method="POST" autocomplete="off">
+                        <input class="events__input" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" name="enter_your_email" aria-label="Entr Your Email address" placeholder="Укажите Ваш email адрес" required>
+                        <button class="events__button" type="submit">Подписаться</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <!-- Hero events finish -->
 
 
 
