--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -288,8 +288,7 @@
             <h2 class="visually-hidden">Our Map</h2>
             <div class="connection__inner">
                 <div class="connection__left">
-                    <iframe class="connection__map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d43426.50703229303!2d37.5559387!3d47.1351962!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40e6e6a7bee7582b%3A0xa5d118300a75b5ce!2z0JzQsNGA0LjRg9C_0L7Qu9GMLCDQlNC-0L3QtdGG0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNC40L3QsCwgODc1MDA!5e0!3m2!1sru!2s!4v1658164631287!5m2!1sru!2s"
-                        style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="noon" src="https://yandex.ru/map-widget/v1/?um=constructor%3A0ff3cbb22a1f5749ce22ae9c334c571a3a9372c61086b6f34b1a1cac8f950e9a&amp;source=constructor" width="500" height="400" frameborder="0"></iframe>
                 </div>
                 <div class="connection__right">
                     <form class="connection__form  form" action="https://echo.htmlacademy.ru/courses" autocomplete="off" method="post">
@@ -310,10 +309,6 @@
             </div>
         </section>
         <!-- Hero connection end -->
-
-
-
-
     </main>
     <!-- Main finish  -->
 
@@ -329,19 +324,13 @@
                 <div class="site-footer__info over">
                     <ul class="over__list">
                         <li class="over__item">
-                            <a class="over__link" href="#">
-                                            Главная
-                                        </a>
+                            <a class="over__link" href="#">Главная</a>
                         </li>
                         <li class="over__item">
-                            <a class="over__link" href="#block">
-                                            О Клинике
-                                        </a>
+                            <a class="over__link" href="#block">О Клинике</a>
                         </li>
                         <li class="over__item">
-                            <a class="over__link" href="#">
-                                            Наши Услуги
-                                        </a>
+                            <a class="over__link" href="#">Наши Услуги</a>
                         </li>
                     </ul>
                 </div>
@@ -385,9 +374,7 @@
                     </ul>
                 </div>
             </div>
-            <p class="site-footer__and">
-                © 2020 example. All Rights Reserved.
-            </p>
+            <p class="site-footer__and">© 2020 example. All Rights Reserved.</p>
         </div>
     </footer>
 
