website is done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vet</title>
     <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/syle.css">
+    <link rel="stylesheet" href="./css/min.css">
 </head>
 
 <body>
@@ -61,7 +61,7 @@
                                 <a class="menu__link" href="#">Главная</a>
                             </li>
                             <li class="menu__item">
-                                <a class="menu__link" href="#">О Клинике</a>
+                                <a class="menu__link " href="#">О Клинике</a>
                             </li>
                             <li class="menu__item">
                                 <a class="menu__link" href="#"> Наши Услуги</a>
@@ -298,11 +298,8 @@
                         </div>
                         <input class="form__input" type="text" name="your_name" aria-label="Entr Your Name" placeholder="Ваше имя" minlength="4" required>
                         <input class="form__input" type="email" name="your_email" aria-label="Entr Your Email Address" placeholder="Email для обратной связи" required>
-                        <label>
-                                        
-                                        <textarea class="form__texterea" name="your_question" cols="30" rows="7" minlength="30" placeholder="Опишите Ваш вопрос. 
-                                        Например: в каком возрасте можно прививать от бешенства?" aria-label="Entr Your Question" required></textarea>
-                                    </label>
+                        <textarea class="form__texterea" name="your_question" cols="30" rows="7" minlength="30" placeholder="Опишите Ваш вопрос.                               Например: в каком возрасте можно         прививать от бешенства?" aria-label="Entr Your Question" required></textarea>
+
                         <button class="form__button" type="submit">Задать нам вопрос</button>
                     </form>
                 </div>
