--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <h2 class="visually-hidden">Our Map</h2>
             <div class="connection__inner">
                 <div class="connection__left">
-                    <iframe class="noon" src="https://yandex.ru/map-widget/v1/?um=constructor%3A0ff3cbb22a1f5749ce22ae9c334c571a3a9372c61086b6f34b1a1cac8f950e9a&amp;source=constructor" width="500" height="400" frameborder="0"></iframe>
+                    <iframe class="noon" src="https://yandex.ru/map-widget/v1/?um=constructor%3A0ff3cbb22a1f5749ce22ae9c334c571a3a9372c61086b6f34b1a1cac8f950e9a&amp;source=constructor" width="500" height="400"></iframe>
                 </div>
                 <div class="connection__right">
                     <form class="connection__form  form" action="https://echo.htmlacademy.ru/courses" autocomplete="off" method="post">
